# hotpotqa

./: .gitignore  README.md  SETUP.md  debug_wandb.py  demo.py  extract_history.py  extract_wandb.py  hotpotqa_eval.py  independent_eval.py  install.sh  process_folders.py  pyproject.toml  uninstall.sh
prompt_opt/: OPENEVOLVE_PROCESS.md  REPORT_simple_ttest.md  gepa_opt.py  openevolve_config.yaml  openevolve_opt.py  run.sh  run_all.py  run_gepa.sh  run_gepa_opensource.sh  run_openevolve.sh  run_openevolve_opensource.sh  run_trace.sh  trace_opt.py
prompt_opt/openevolve_opt/: config.yaml  evaluator.py  initial_prompt.txt  run_openevolve.py
prompt_opt/results/gepa_openai/gpt-oss-20b/gepa_1/: history.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/: _eval_state.json  eval_history.jsonl
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/best/: best_program_info.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/checkpoints/checkpoint_1/: best_program_info.json  metadata.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/checkpoints/checkpoint_10/: best_program_info.json  metadata.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/checkpoints/checkpoint_11/: best_program_info.json  metadata.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_1/checkpoints/checkpoint_12/: best_program_info.json  metadata.json
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_2/: _eval_state.json  eval_history.jsonl
prompt_opt/results/openevolve_gpt-oss-20b/openevolve_2/best/: best_program_info.json
(+157 files in other folders)
